2004-07-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added listen port and listen address used when communicating
	with mod-mono-server over a TCP socket. Implemented apr_sockaddr_info_get and
	apr_socket_connect for apache 1.3. Pass --debug option when forking mono.

2004-07-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed more commands and send their data upon
	connection.

2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed the mutex stuff that prevented multiple forks
	no first request. It doesn't work on RH9 :-? (worked on debian sid with
	apache2 and 1.3).

2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed unused commands, unified setting status code
	and message into one single command. Now apache handles closing the
	socket used to connect to mod-mono-server and waiting, terminating or
	killing the forked process when the configuration is reloaded or apache
	is shut down. When we get several request, don't fork more than once.

2004-07-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* COPYING:
	* src/ApacheApplicationHost.cs:
	* src/ApacheWorkerRequest.cs:
	* src/IApplicationHost.cs:
	* src/MonoWorkerRequest.cs:
	* src/Request.cs:
	* src/mod_mono.c:
	* src/mod_mono_old.c: relicensed under apache license version 2.0.
	Agreed with Daniel.

2004-06-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Released 1.0

2004-06-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* configure.in:
	* src/Makefile.am:
	* src/mod_mono.c: added --with-mono-prefix configure option so that
	if mod_mono is installed in a different prefix from mono, the default
	paths for locating mono and mod-mono-server.exe are right.

2004-06-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: fixed a couple of big-endian issues.

2004-06-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for endian-ness.