@@ -1,8 +1,15 @@
+2004-07-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* configure.in:
+	* src/mod_mono.c: seems like apr_socket_connect is post 0.9.2 version
+	of libapr.
+
 2004-07-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
-	* src/mod_mono.c: added listen port and listen address used when communicating
-	with mod-mono-server over a TCP socket. Implemented apr_sockaddr_info_get and
-	apr_socket_connect for apache 1.3. Pass --debug option when forking mono.
+	* src/mod_mono.c: added listen port and listen address used when
+	communicating with mod-mono-server over a TCP socket. Implemented
+	apr_sockaddr_info_get and apr_socket_connect for apache 1.3. Pass
+	--debug option when forking mono.
 
 2004-07-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
